--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.8.1,<4.0.0"
 textual = "^0.85.2"
+pygame = "^2.6.1"
 
 
 [build-system]
